{
    "name": "MainInput",
    "maps": [
        {
            "name": "inLevel",
            "id": "4f844909-2d9a-4c3f-854e-7c07d1126599",
            "actions": [
                {
                    "name": "inputChannel0",
                    "type": "Button",
                    "id": "eeb29230-6e1c-4d52-8499-323a7a2eb8a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel1",
                    "type": "Button",
                    "id": "1d063f87-7934-4a1b-a9c5-f77083156e8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel2",
                    "type": "Button",
                    "id": "5509cae3-5220-4456-99d9-6742edb80dd4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel3",
                    "type": "Button",
                    "id": "b9086da5-a542-4a9b-8a8d-65cea0db035d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel4",
                    "type": "Button",
                    "id": "1e1da4ff-f89f-43f5-9c07-b142c246eb83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel5",
                    "type": "Button",
                    "id": "2df5ecec-bfec-4b0f-8cb7-62c3f02e2511",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel6",
                    "type": "Button",
                    "id": "a3aa7a5f-c31b-426c-bee1-953cd05e91f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inputChannel7",
                    "type": "Button",
                    "id": "05620491-57d6-43fa-8a60-c901b9615692",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6c10ed0-93c1-4af4-8a62-b76b60975527",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d54f881-37f0-4f39-bbbf-44098a75911e",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ad5d0d6-5abe-4759-91ef-9b8a9ec7d014",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62d718ea-a244-4436-ae48-0714822a4102",
                    "path": "<Keyboard>/k",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cba4ccaf-1423-43b4-82b5-10c163e93356",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cdb1f57-db0f-4205-957d-7d4120d4dd09",
                    "path": "<Keyboard>/k",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58a4b020-0494-44a2-8766-a75a3197eec6",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf6f7645-7a3e-4eab-83a0-b56baccf5b90",
                    "path": "<Keyboard>/l",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC-Keyboard",
                    "action": "inputChannel6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC-Keyboard",
            "bindingGroup": "PC-Keyboard",
            "devices": []
        }
    ]
}